--- a/code/HSQL/HSQL/HSQL.csproj
+++ b/code/HSQL/HSQL/HSQL.csproj
@@ -10,6 +10,7 @@
     <Version>1.0.0.0</Version>
     <SignAssembly>false</SignAssembly>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageId>HSQL.NET</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
