--- a/code/HSQL/HSQL.Test/HSQL.Test.csproj
+++ b/code/HSQL/HSQL.Test/HSQL.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HSQL.MySQL\HSQL.MySQL.csproj" />
     <ProjectReference Include="..\HSQL\HSQL.csproj" />
   </ItemGroup>
 
