--- a/code/HSQL/HSQL.MSSQLServer/HSQL.MSSQLServer.csproj
+++ b/code/HSQL/HSQL.MSSQLServer/HSQL.MSSQLServer.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.0.6</Version>
+    <Version>1.0.0.7</Version>
     <Authors>何旭</Authors>
     <Company>何旭</Company>
     <Product>HSQL</Product>
     <Description>HSQL 是一种轻量级的基于 .NET 的ORM框架</Description>
+    <RepositoryUrl>https://github.com/hexu6788/HSQL</RepositoryUrl>
     <PackageProjectUrl>https://github.com/hexu6788/HSQL</PackageProjectUrl>
   </PropertyGroup>
 
