增加控制台打印Sql功能

--- a/code/HSQL/HSQL.Test/HSQL.Test.csproj
+++ b/code/HSQL/HSQL.Test/HSQL.Test.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HSQL.MSSQLServer\HSQL.MSSQLServer.csproj" />
+    <ProjectReference Include="..\HSQL.MySQL\HSQL.MySQL.csproj" />
     <ProjectReference Include="..\HSQL\HSQL.csproj" />
   </ItemGroup>
 
