--- a/code/HSQL/HSQL.MySQL/HSQL.MySQL.csproj
+++ b/code/HSQL/HSQL.MySQL/HSQL.MySQL.csproj
@@ -9,7 +9,8 @@
     <Product>HSQL</Product>
     <RepositoryUrl>https://github.com/hexu6788/HSQL</RepositoryUrl>
     <PackageProjectUrl>https://github.com/hexu6788/HSQL</PackageProjectUrl>
-    <Version>1.0.0.14</Version>
+    <Version>1.0.0.15</Version>
+    <AssemblyVersion>1.0.0.15</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
